syntax = "proto3";

package SteelMES;

service DB_Service {
    rpc reqProdHistory (prodHistoryInfoRequest) returns (prodHistoryInfoReply) {}
    rpc GetAllDefects (Empty) returns (prodHistoryInfoReply) {}
    rpc GetDefectsByProductID (DefectByProductIDRequest) returns (prodHistoryInfoReply) {}
    rpc GetFactoryData (Empty) returns (FactoryReply) {}
    rpc GetProductionLineData (ProductionLineRequest) returns (ProductionLineReply) {}
    rpc GetMaterialData (Empty) returns (MaterialReply) {}       // MATERIAL 데이터를 가져오는 RPC
    rpc GetSupplierData (Empty) returns (SupplierReply) {}       // SUPPLIER 데이터를 가져오는 RPC
    rpc UpdateMaterialQuantity (UpdateMaterialQuantityRequest) returns (UpdateMaterialQuantityReply);

}

// 기본 Empty 메시지
message Empty {}

// 불량 이력 요청 메시지
message prodHistoryInfoRequest {
    string fromTime = 1;
    string toTime = 2;
}

// 특정 제품 ID 기반 요청 메시지
message DefectByProductIDRequest {
    int32 productID = 1;
}

// 불량 이력 정보
message prodHistoryInfo {
    int32 defectID = 1;
    int32 productID = 2;
    int32 materialID = 3;
    string defectType = 4;
    string defectionDate = 5;
    string location = 6;
}

// 불량 이력 응답 메시지
message prodHistoryInfoReply {
    int32 errorCode = 1;
    repeated prodHistoryInfo infos = 2;
}

// 공장 정보
message FactoryInfo {
    int32 facID = 1;
    string location = 2;
}

// 공장 정보 응답 메시지
message FactoryReply {
    int32 errorCode = 1;
    repeated FactoryInfo factories = 2;
}

// 생산 라인 요청 메시지
message ProductionLineRequest {
    int32 facID = 1;
}

// 생산 라인 정보
message ProductionLineInfo {
    int32 facID = 1;
    int32 lineID = 2;
    string lineName = 3;
    string operateDate = 4;
}

// 생산 라인 응답 메시지
message ProductionLineReply {
    int32 errorCode = 1;
    repeated ProductionLineInfo lines = 2;
}

// 자재 정보
message MaterialInfo {
    int32 materialID = 1;
    string materialName = 2;
    int32 supplierID = 3;
    int32 quantity = 4;
    string importDate = 5;
}

// 자재 정보 응답 메시지
message MaterialReply {
    int32 errorCode = 1;
    repeated MaterialInfo materials = 2;
}

// 공급업체 정보
message SupplierInfo {
    int32 supplierID = 1;
    string supplierName = 2;
    string contactInfo = 3;
    string country = 4;
}

// 공급업체 정보 응답 메시지
message SupplierReply {
    int32 errorCode = 1;
    repeated SupplierInfo suppliers = 2;
}
// 자재 수량 DB 업데이트
message UpdateMaterialQuantityRequest {
    int32 materialID = 1;
    int32 additionalQuantity = 2;
}

message UpdateMaterialQuantityReply {
    int32 errorCode = 1;
}
